--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -32,7 +32,7 @@
             });
 
             // activate menu items where href is matching to current page
-            $("#mysidebar a[href='" + location.pathname.split('/')[1] + "']")
+            $("#mysidebar a[href='" + location.pathname + "']")
                 .parents('li').addClass('active')
                 .parents('ul').css('display', 'block');
         });
